--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OAI_KEY = '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'
+OAI_KEY = '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' # revoked key, no longer usable
